# pyreshut

./: LICENSE  README.md  pyproject.toml  pyreshut.c  pyreshut.py
src/pyreshut/: __init__.py  __main__.py  pyreshut.c  pyreshut.py
src/pyreshut.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
