[project]
name = "pyreshut"
version = "1.0"
authors = [
 { name="ViCoder32", email="x.daahome@gmail.com" },
]
description = "In readme"
readme = "README.md"
requires-python = ">=3.10.0"
classifiers = [
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
]



